<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context="pointlessgroup.pointless.TimeRecordActivity"
  >

  <TextView
    android:id="@+id/timer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="00:00"
    />

  <TextView
    android:id="@+id/timer_difference"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="07:58"
    />

  <Button
    android:id="@+id/btn_mainactivity_timerecord"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    />

</LinearLayout>
